feat(admin): complete users and group companies
